Enable the blank cursor style option
git-svn-id: svn://anonsvn.kde.org/home/kde/trunk/koffice@967492 283d02a7-25f6-0310-bc7c-ecb5cbfe19da

--- a/krita/ui/forms/wdggeneralsettings.ui
+++ b/krita/ui/forms/wdggeneralsettings.ui
@@ -1,7 +1,8 @@
-<ui version="4.0" >
+<?xml version="1.0" encoding="UTF-8"?>
+<ui version="4.0">
  <class>WdgGeneralSettings</class>
- <widget class="QWidget" name="WdgGeneralSettings" >
-  <property name="geometry" >
+ <widget class="QWidget" name="WdgGeneralSettings">
+  <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
@@ -9,47 +10,52 @@
     <height>209</height>
    </rect>
   </property>
-  <layout class="QGridLayout" name="gridLayout" >
-   <item row="0" column="0" >
-    <layout class="QVBoxLayout" >
-     <property name="margin" >
+  <layout class="QGridLayout" name="gridLayout">
+   <item row="0" column="0">
+    <layout class="QVBoxLayout">
+     <property name="margin">
       <number>0</number>
      </property>
      <item>
-      <layout class="QHBoxLayout" >
-       <property name="margin" >
+      <layout class="QHBoxLayout">
+       <property name="margin">
         <number>0</number>
        </property>
        <item>
-        <widget class="QLabel" name="textLabel1" >
-         <property name="text" >
+        <widget class="QLabel" name="textLabel1">
+         <property name="text">
           <string>&amp;Cursor shape:</string>
          </property>
-         <property name="buddy" >
+         <property name="buddy">
           <cstring>m_cmbCursorShape</cstring>
          </property>
         </widget>
        </item>
        <item>
-        <widget class="QComboBox" name="m_cmbCursorShape" >
+        <widget class="QComboBox" name="m_cmbCursorShape">
          <item>
-          <property name="text" >
+          <property name="text">
            <string>Tool Icon</string>
           </property>
          </item>
          <item>
-          <property name="text" >
+          <property name="text">
            <string>Crosshair</string>
           </property>
          </item>
          <item>
-          <property name="text" >
+          <property name="text">
            <string>Arrow</string>
           </property>
          </item>
          <item>
-          <property name="text" >
+          <property name="text">
            <string>Brush Outline</string>
+          </property>
+         </item>
+         <item>
+          <property name="text">
+           <string>No Cursor</string>
           </property>
          </item>
         </widget>
@@ -58,15 +64,15 @@
      </item>
     </layout>
    </item>
-   <item row="0" column="1" >
-    <spacer name="spacer1" >
-     <property name="orientation" >
+   <item row="0" column="1">
+    <spacer name="spacer1">
+     <property name="orientation">
       <enum>Qt::Horizontal</enum>
      </property>
-     <property name="sizeType" >
+     <property name="sizeType">
       <enum>QSizePolicy::Expanding</enum>
      </property>
-     <property name="sizeHint" stdset="0" >
+     <property name="sizeHint" stdset="0">
       <size>
        <width>41</width>
        <height>20</height>
@@ -74,22 +80,22 @@
      </property>
     </spacer>
    </item>
-   <item row="1" column="0" colspan="2" >
-    <widget class="QCheckBox" name="chkShowRootLayer" >
-     <property name="text" >
+   <item row="1" column="0" colspan="2">
+    <widget class="QCheckBox" name="chkShowRootLayer">
+     <property name="text">
       <string>Show root layer</string>
      </property>
     </widget>
    </item>
-   <item row="2" column="0" >
-    <spacer name="spacer2" >
-     <property name="orientation" >
+   <item row="2" column="0">
+    <spacer name="spacer2">
+     <property name="orientation">
       <enum>Qt::Vertical</enum>
      </property>
-     <property name="sizeType" >
+     <property name="sizeType">
       <enum>QSizePolicy::Expanding</enum>
      </property>
-     <property name="sizeHint" stdset="0" >
+     <property name="sizeHint" stdset="0">
       <size>
        <width>20</width>
        <height>41</height>
@@ -99,7 +105,7 @@
    </item>
   </layout>
  </widget>
- <layoutdefault spacing="6" margin="11" />
+ <layoutdefault spacing="6" margin="11"/>
  <resources/>
  <connections/>
 </ui>
