--- a/krita/plugins/extensions/backgrounds/wdg_backgrounds.ui
+++ b/krita/plugins/extensions/backgrounds/wdg_backgrounds.ui
@@ -15,7 +15,7 @@
   </property>
   <layout class="QGridLayout" name="gridLayout">
    <item row="0" column="0" colspan="2">
-    <widget class="QLabel" name="blName">
+    <widget class="QLabel" name="lblName">
      <property name="text">
       <string>TextLabel</string>
      </property>
