Added one more field "East Asian characters" to the statistics dialog and statistics docker. This field counts the number of East Asian (Chinese-Japanese-Korean) characters inside the text.
The word count is still wrong for Asian characters though, but this requires further study on how the words should be counted when Asian characters are mixed with western words.

CCBUG: 150653



git-svn-id: svn://anonsvn.kde.org/home/kde/trunk/koffice@972715 283d02a7-25f6-0310-bc7c-ecb5cbfe19da

--- a/kword/part/dockers/KWStatisticsDocker.ui
+++ b/kword/part/dockers/KWStatisticsDocker.ui
@@ -48,6 +48,11 @@
      </item>
      <item>
       <property name="text">
+       <string>East Asian characters</string>
+      </property>
+     </item>
+     <item>
+      <property name="text">
        <string>Flesch reading ease</string>
       </property>
      </item>
