--- a/kword/part/dialogs/KWStatistics.ui
+++ b/kword/part/dialogs/KWStatistics.ui
@@ -325,28 +325,41 @@
          </property>
         </spacer>
        </item>
-       <item row="7" column="3" rowspan="2">
+       <item row="7" column="3">
         <widget class="QLabel" name="cjkChars">
-         <property name="text">
-          <string/>
-         </property>
-        </widget>
-       </item>
-       <item row="8" column="1" rowspan="2" colspan="2">
-        <widget class="QLabel" name="flesch">
          <property name="alignment">
           <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
          </property>
         </widget>
        </item>
-       <item row="9" column="0">
+       <item row="8" column="0">
         <widget class="QLabel" name="label_27">
          <property name="text">
           <string>Flesch reading ease:</string>
          </property>
         </widget>
        </item>
-       <item row="10" column="2">
+       <item row="8" column="2">
+        <spacer>
+         <property name="orientation">
+          <enum>Qt::Horizontal</enum>
+         </property>
+         <property name="sizeHint" stdset="0">
+          <size>
+           <width>40</width>
+           <height>20</height>
+          </size>
+         </property>
+        </spacer>
+       </item>
+       <item row="8" column="3">
+        <widget class="QLabel" name="flesch">
+         <property name="alignment">
+          <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+         </property>
+        </widget>
+       </item>
+       <item row="9" column="2">
         <spacer>
          <property name="orientation">
           <enum>Qt::Vertical</enum>
