--- a/kspread/part/dialogs/PageLayoutSheetPage.ui
+++ b/kspread/part/dialogs/PageLayoutSheetPage.ui
@@ -152,7 +152,7 @@ Fifth Floor, Boston, MA 02110-1301, USA.</comment>
       <item>
        <widget class="QCheckBox" name="horizontalCheckBox" >
         <property name="text" >
-         <string>Center horizonally</string>
+         <string>Center horizontally</string>
         </property>
        </widget>
       </item>
