--- a/krita/plugins/extensions/imagesize/wdg_imagescale.ui
+++ b/krita/plugins/extensions/imagesize/wdg_imagescale.ui
@@ -1,36 +1,37 @@
-<ui version="4.0" >
+<?xml version="1.0" encoding="UTF-8"?>
+<ui version="4.0">
  <class>WdgImageScale</class>
- <widget class="QWidget" name="WdgImageScale" >
-  <property name="geometry" >
+ <widget class="QWidget" name="WdgImageScale">
+  <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>425</width>
-    <height>385</height>
+    <width>412</width>
+    <height>334</height>
    </rect>
   </property>
-  <property name="windowTitle" >
+  <property name="windowTitle">
    <string>Scale To New Size</string>
   </property>
-  <layout class="QVBoxLayout" name="verticalLayout" >
+  <layout class="QVBoxLayout" name="verticalLayout">
    <item>
-    <widget class="QGroupBox" name="groupPixelSize" >
-     <property name="title" >
+    <widget class="QGroupBox" name="groupPixelSize">
+     <property name="title">
       <string>Size in Pixels</string>
      </property>
-     <property name="flat" >
+     <property name="flat">
       <bool>true</bool>
      </property>
-     <layout class="QGridLayout" name="gridLayout_3" >
-      <item row="0" column="0" >
-       <spacer name="spacer_6" >
-        <property name="orientation" >
+     <layout class="QGridLayout" name="gridLayout_3">
+      <item row="0" column="0">
+       <spacer name="spacer_6">
+        <property name="orientation">
          <enum>Qt::Horizontal</enum>
         </property>
-        <property name="sizeType" >
+        <property name="sizeType">
          <enum>QSizePolicy::Fixed</enum>
         </property>
-        <property name="sizeHint" stdset="0" >
+        <property name="sizeHint" stdset="0">
          <size>
           <width>100</width>
           <height>0</height>
@@ -38,42 +39,42 @@
         </property>
        </spacer>
       </item>
-      <item row="1" column="1" >
-       <widget class="QSpinBox" name="intPixelWidth" >
-        <property name="minimum" >
-         <number>1</number>
-        </property>
-        <property name="maximum" >
-         <number>1000000</number>
-        </property>
-       </widget>
-      </item>
-      <item rowspan="2" row="1" column="2" >
-       <widget class="KoAspectButton" name="aspectPixels" >
-        <property name="text" >
-         <string/>
-        </property>
-       </widget>
-      </item>
-      <item row="1" column="0" >
-       <widget class="QLabel" name="labelWidth" >
-        <property name="text" >
+      <item row="1" column="0">
+       <widget class="QLabel" name="labelWidth">
+        <property name="text">
          <string>Width:</string>
         </property>
-        <property name="alignment" >
+        <property name="alignment">
          <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
         </property>
-        <property name="buddy" >
+        <property name="buddy">
          <cstring>intPixelWidth</cstring>
         </property>
        </widget>
       </item>
-      <item rowspan="2" row="1" column="3" >
+      <item row="1" column="1">
+       <widget class="QSpinBox" name="intPixelWidth">
+        <property name="minimum">
+         <number>1</number>
+        </property>
+        <property name="maximum">
+         <number>1000000</number>
+        </property>
+       </widget>
+      </item>
+      <item row="1" column="5" rowspan="2">
+       <widget class="KoAspectButton" name="aspectPixels">
+        <property name="text">
+         <string/>
+        </property>
+       </widget>
+      </item>
+      <item row="1" column="6" rowspan="2">
        <spacer>
-        <property name="orientation" >
+        <property name="orientation">
          <enum>Qt::Horizontal</enum>
         </property>
-        <property name="sizeHint" stdset="0" >
+        <property name="sizeHint" stdset="0">
          <size>
           <width>0</width>
           <height>0</height>
@@ -81,32 +82,95 @@
         </property>
        </spacer>
       </item>
-      <item row="2" column="0" >
-       <widget class="QLabel" name="labelHeight" >
-        <property name="text" >
+      <item row="2" column="0">
+       <widget class="QLabel" name="labelHeight">
+        <property name="text">
          <string>Height:</string>
         </property>
-        <property name="alignment" >
+        <property name="alignment">
          <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
         </property>
-        <property name="buddy" >
+        <property name="buddy">
          <cstring>intPixelHeight</cstring>
         </property>
        </widget>
       </item>
-      <item row="2" column="1" >
-       <widget class="QSpinBox" name="intPixelHeight" >
-        <property name="minimumSize" >
+      <item row="2" column="1">
+       <widget class="QSpinBox" name="intPixelHeight">
+        <property name="minimumSize">
          <size>
           <width>80</width>
           <height>0</height>
          </size>
         </property>
-        <property name="minimum" >
+        <property name="minimum">
          <number>1</number>
         </property>
-        <property name="maximum" >
+        <property name="maximum">
          <number>1000000</number>
+        </property>
+       </widget>
+      </item>
+      <item row="1" column="3">
+       <widget class="QComboBox" name="cmbWidthPixelUnit">
+        <item>
+         <property name="text">
+          <string>Pixels</string>
+         </property>
+        </item>
+        <item>
+         <property name="text">
+          <string>Percent (%)</string>
+         </property>
+        </item>
+       </widget>
+      </item>
+      <item row="2" column="3">
+       <widget class="QComboBox" name="cmbHeightPixelUnit">
+        <item>
+         <property name="text">
+          <string>Pixels</string>
+         </property>
+        </item>
+        <item>
+         <property name="text">
+          <string>Percent (%)</string>
+         </property>
+        </item>
+       </widget>
+      </item>
+      <item row="1" column="1">
+       <widget class="QDoubleSpinBox" name="doublePercentageWidth">
+        <property name="minimumSize">
+         <size>
+          <width>80</width>
+          <height>0</height>
+         </size>
+        </property>
+        <property name="decimals">
+         <number>2</number>
+        </property>
+        <property name="minimum">
+         <double>1.000000000000000</double>
+        </property>
+        <property name="maximum">
+         <double>100000000.000000000000000</double>
+        </property>
+       </widget>
+      </item>
+      <item row="2" column="1">
+       <widget class="QDoubleSpinBox" name="doublePercentageHeight">
+        <property name="minimumSize">
+         <size>
+          <width>80</width>
+          <height>0</height>
+         </size>
+        </property>
+        <property name="minimum">
+         <double>1.000000000000000</double>
+        </property>
+        <property name="maximum">
+         <double>100000000.000000000000000</double>
         </property>
        </widget>
       </item>
@@ -114,23 +178,23 @@
     </widget>
    </item>
    <item>
-    <widget class="QGroupBox" name="groupPhysicalsize" >
-     <property name="title" >
+    <widget class="QGroupBox" name="groupPhysicalsize">
+     <property name="title">
       <string>Print Size</string>
      </property>
-     <property name="flat" >
+     <property name="flat">
       <bool>true</bool>
      </property>
-     <layout class="QGridLayout" name="gridLayout_4" >
-      <item row="0" column="0" >
-       <spacer name="spacer_5" >
-        <property name="orientation" >
+     <layout class="QGridLayout" name="gridLayout_4">
+      <item row="0" column="0">
+       <spacer name="spacer_5">
+        <property name="orientation">
          <enum>Qt::Horizontal</enum>
         </property>
-        <property name="sizeType" >
+        <property name="sizeType">
          <enum>QSizePolicy::Fixed</enum>
         </property>
-        <property name="sizeHint" stdset="0" >
+        <property name="sizeHint" stdset="0">
          <size>
           <width>100</width>
           <height>0</height>
@@ -138,43 +202,43 @@
         </property>
        </spacer>
       </item>
-      <item row="1" column="1" >
-       <widget class="QDoubleSpinBox" name="doublePhysicalWidth" >
-        <property name="minimumSize" >
+      <item row="1" column="1">
+       <widget class="QDoubleSpinBox" name="doublePhysicalWidth">
+        <property name="minimumSize">
          <size>
           <width>80</width>
           <height>0</height>
          </size>
         </property>
-        <property name="decimals" >
+        <property name="decimals">
          <number>2</number>
         </property>
-        <property name="minimum" >
+        <property name="minimum">
          <double>1.000000000000000</double>
         </property>
-        <property name="maximum" >
+        <property name="maximum">
          <double>100000000.000000000000000</double>
         </property>
        </widget>
       </item>
-      <item rowspan="2" row="1" column="2" >
-       <layout class="QGridLayout" name="gridLayout_2" >
-        <item row="0" column="0" >
-         <widget class="QComboBox" name="cmbWidthUnit" />
+      <item row="1" column="2" rowspan="2">
+       <layout class="QGridLayout" name="gridLayout_2">
+        <item row="0" column="0">
+         <widget class="QComboBox" name="cmbWidthUnit"/>
         </item>
-        <item rowspan="2" row="0" column="1" >
-         <widget class="KoAspectButton" name="aspectPhysical" >
-          <property name="text" >
+        <item row="0" column="1" rowspan="2">
+         <widget class="KoAspectButton" name="aspectPhysical">
+          <property name="text">
            <string/>
           </property>
          </widget>
         </item>
-        <item rowspan="2" row="0" column="2" >
-         <spacer name="spacer_3" >
-          <property name="orientation" >
+        <item row="0" column="2" rowspan="2">
+         <spacer name="spacer_3">
+          <property name="orientation">
            <enum>Qt::Horizontal</enum>
           </property>
-          <property name="sizeHint" stdset="0" >
+          <property name="sizeHint" stdset="0">
            <size>
             <width>0</width>
             <height>27</height>
@@ -182,105 +246,105 @@
           </property>
          </spacer>
         </item>
-        <item row="1" column="0" >
-         <widget class="QComboBox" name="cmbHeightUnit" />
+        <item row="1" column="0">
+         <widget class="QComboBox" name="cmbHeightUnit"/>
         </item>
        </layout>
       </item>
-      <item row="1" column="0" >
-       <widget class="QLabel" name="labelPhysicalWidth" >
-        <property name="text" >
+      <item row="1" column="0">
+       <widget class="QLabel" name="labelPhysicalWidth">
+        <property name="text">
          <string>Print Width:</string>
         </property>
-        <property name="alignment" >
+        <property name="alignment">
          <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
         </property>
-        <property name="buddy" >
+        <property name="buddy">
          <cstring>doublePhysicalWidth</cstring>
         </property>
        </widget>
       </item>
-      <item row="2" column="0" >
-       <widget class="QLabel" name="labelPhysicalHeight" >
-        <property name="text" >
+      <item row="2" column="0">
+       <widget class="QLabel" name="labelPhysicalHeight">
+        <property name="text">
          <string>Print Height:</string>
         </property>
-        <property name="alignment" >
+        <property name="alignment">
          <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
         </property>
-        <property name="buddy" >
+        <property name="buddy">
          <cstring>doublePhysicalHeight</cstring>
         </property>
        </widget>
       </item>
-      <item row="2" column="1" >
-       <widget class="QDoubleSpinBox" name="doublePhysicalHeight" >
-        <property name="minimumSize" >
+      <item row="2" column="1">
+       <widget class="QDoubleSpinBox" name="doublePhysicalHeight">
+        <property name="minimumSize">
          <size>
           <width>80</width>
           <height>0</height>
          </size>
         </property>
-        <property name="minimum" >
+        <property name="minimum">
          <double>1.000000000000000</double>
         </property>
-        <property name="maximum" >
+        <property name="maximum">
          <double>100000000.000000000000000</double>
         </property>
        </widget>
       </item>
-      <item row="3" column="0" >
-       <widget class="QLabel" name="labelResolution" >
-        <property name="text" >
+      <item row="3" column="0">
+       <widget class="QLabel" name="labelResolution">
+        <property name="text">
          <string>Resolution:</string>
         </property>
-        <property name="alignment" >
+        <property name="alignment">
          <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
         </property>
        </widget>
       </item>
-      <item row="3" column="1" >
-       <layout class="QHBoxLayout" name="horizontalLayout_2" >
+      <item row="3" column="1">
+       <layout class="QHBoxLayout" name="horizontalLayout_2">
         <item>
-         <widget class="QCheckBox" name="chkAffectResolution" >
-          <property name="text" >
+         <widget class="QCheckBox" name="chkAffectResolution">
+          <property name="text">
            <string/>
           </property>
          </widget>
         </item>
         <item>
-         <widget class="QDoubleSpinBox" name="doubleResolution" >
-          <property name="minimumSize" >
+         <widget class="QDoubleSpinBox" name="doubleResolution">
+          <property name="minimumSize">
            <size>
             <width>70</width>
             <height>0</height>
            </size>
           </property>
-          <property name="maximum" >
+          <property name="maximum">
            <double>100000000.000000000000000</double>
           </property>
          </widget>
         </item>
        </layout>
       </item>
-      <item row="3" column="2" >
-       <layout class="QHBoxLayout" name="horizontalLayout" >
+      <item row="3" column="2">
+       <layout class="QHBoxLayout" name="horizontalLayout">
         <item>
-         <widget class="QLabel" name="labelInteractor" >
-          <property name="text" >
+         <widget class="QLabel" name="labelInteractor">
+          <property name="text">
            <string>interacting with</string>
           </property>
          </widget>
         </item>
         <item>
-         <widget class="QComboBox" name="cmbInteractor" />
+         <widget class="QComboBox" name="cmbInteractor"/>
         </item>
         <item>
-         <spacer name="spacer_4" >
-          <property name="orientation" >
+         <spacer name="spacer_4">
+          <property name="orientation">
            <enum>Qt::Horizontal</enum>
           </property>
-          <property name="sizeHint" stdset="0" >
+          <property name="sizeHint" stdset="0">
            <size>
             <width>0</width>
             <height>27</height>
@@ -294,23 +358,23 @@
     </widget>
    </item>
    <item>
-    <widget class="QGroupBox" name="groupBox" >
-     <property name="title" >
+    <widget class="QGroupBox" name="groupBox">
+     <property name="title">
       <string>Scaling Options</string>
      </property>
-     <property name="flat" >
+     <property name="flat">
       <bool>true</bool>
      </property>
-     <layout class="QGridLayout" name="gridLayout" >
-      <item row="0" column="0" >
-       <spacer name="spacer_8" >
-        <property name="orientation" >
+     <layout class="QGridLayout" name="gridLayout">
+      <item row="0" column="0">
+       <spacer name="spacer_8">
+        <property name="orientation">
          <enum>Qt::Horizontal</enum>
         </property>
-        <property name="sizeType" >
+        <property name="sizeType">
          <enum>QSizePolicy::Fixed</enum>
         </property>
-        <property name="sizeHint" stdset="0" >
+        <property name="sizeHint" stdset="0">
          <size>
           <width>100</width>
           <height>0</height>
@@ -318,25 +382,25 @@
         </property>
        </spacer>
       </item>
-      <item row="1" column="0" >
-       <widget class="QLabel" name="labelFilter" >
-        <property name="text" >
+      <item row="1" column="0">
+       <widget class="QLabel" name="labelFilter">
+        <property name="text">
          <string>Interpolation:</string>
         </property>
-        <property name="alignment" >
+        <property name="alignment">
          <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
         </property>
-        <property name="buddy" >
+        <property name="buddy">
          <cstring>doublePhysicalWidth</cstring>
         </property>
        </widget>
       </item>
-      <item row="1" column="2" >
-       <spacer name="spacer" >
-        <property name="orientation" >
+      <item row="1" column="2">
+       <spacer name="spacer">
+        <property name="orientation">
          <enum>Qt::Horizontal</enum>
         </property>
-        <property name="sizeHint" stdset="0" >
+        <property name="sizeHint" stdset="0">
          <size>
           <width>181</width>
           <height>17</height>
@@ -344,44 +408,18 @@
         </property>
        </spacer>
       </item>
-      <item row="1" column="1" >
-       <widget class="KisCmbIDList" native="1" name="cmbFilterType" />
-      </item>
-      <item row="2" column="1" >
-       <widget class="QCheckBox" name="chkPercentage" >
-        <property name="enabled" >
-         <bool>true</bool>
-        </property>
-        <property name="text" >
-         <string>sizes as percentage %</string>
-        </property>
-       </widget>
-      </item>
-      <item row="2" column="0" >
-       <widget class="QLabel" name="labelPercentage" >
-        <property name="enabled" >
-         <bool>true</bool>
-        </property>
-        <property name="text" >
-         <string>Specify:</string>
-        </property>
-        <property name="alignment" >
-         <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
-        </property>
-        <property name="buddy" >
-         <cstring>doublePhysicalWidth</cstring>
-        </property>
-       </widget>
+      <item row="1" column="1">
+       <widget class="KisCmbIDList" name="cmbFilterType" native="true"/>
       </item>
      </layout>
     </widget>
    </item>
    <item>
     <spacer>
-     <property name="orientation" >
+     <property name="orientation">
       <enum>Qt::Vertical</enum>
      </property>
-     <property name="sizeHint" stdset="0" >
+     <property name="sizeHint" stdset="0">
       <size>
        <width>0</width>
        <height>0</height>
