--- a/kspread/dialogs/ProtectionWidget.ui
+++ b/kspread/dialogs/ProtectionWidget.ui
@@ -93,7 +93,7 @@ Note that you can print it even if the cell is protected</string>
           <item>
            <widget class="QCheckBox" name="m_bIsProtected" >
             <property name="whatsThis" >
-             <string>If checked, the cell content will be protected. This is the default behaviour. You need to protect the whole sheet using the Tools->Protect document->Protect Sheet... menu for this individual cell protection to work. See the manual for more details in the Advanced KSpread chapter. When a cell is protected, its content cannot be changed.</string>
+             <string>If checked, the cell content will be protected. This is the default behavior. You need to protect the whole sheet using the Tools->Protect document->Protect Sheet... menu option for this individual cell protection to work. See the manual for more details in the Advanced KSpread chapter. When a cell is protected, its content cannot be changed.</string>
             </property>
             <property name="text" >
              <string>&amp;Protected</string>
