--- a/kplato/kptconfigtaskpanelbase.ui
+++ b/kplato/kptconfigtaskpanelbase.ui
@@ -12,6 +12,9 @@
    </rect>
   </property>
   <layout class="QGridLayout" name="gridLayout">
+   <property name="margin">
+    <number>0</number>
+   </property>
    <item row="0" column="0" colspan="3">
     <layout class="QHBoxLayout">
      <property name="spacing">
@@ -363,6 +366,21 @@ This is not limited to persons available in a resource group but can be anyone. 
      <property name="editable">
       <bool>false</bool>
      </property>
+     <item>
+      <property name="text">
+       <string>Year</string>
+      </property>
+     </item>
+     <item>
+      <property name="text">
+       <string>Month</string>
+      </property>
+     </item>
+     <item>
+      <property name="text">
+       <string>Week</string>
+      </property>
+     </item>
      <item>
       <property name="text">
        <string>Day</string>
