--- a/krita/ui/forms/wdgfilterselector.ui
+++ b/krita/ui/forms/wdgfilterselector.ui
@@ -1,7 +1,8 @@
-<ui version="4.0" >
+<?xml version="1.0" encoding="UTF-8"?>
+<ui version="4.0">
  <class>FilterSelector</class>
- <widget class="QWidget" name="FilterSelector" >
-  <property name="geometry" >
+ <widget class="QWidget" name="FilterSelector">
+  <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
@@ -9,53 +10,53 @@
     <height>359</height>
    </rect>
   </property>
-  <property name="windowTitle" >
+  <property name="windowTitle">
    <string>Filter selection</string>
   </property>
-  <layout class="QGridLayout" >
-   <item row="0" column="0" >
-    <widget class="QSplitter" name="splitter" >
-     <property name="orientation" >
+  <layout class="QGridLayout">
+   <item row="0" column="0">
+    <widget class="QSplitter" name="splitter">
+     <property name="orientation">
       <enum>Qt::Horizontal</enum>
      </property>
-     <widget class="QWidget" name="layoutWidget" >
-      <layout class="QVBoxLayout" >
+     <widget class="QWidget" name="layoutWidget">
+      <layout class="QVBoxLayout">
        <item>
-        <widget class="QLabel" name="label_2" >
-         <property name="text" >
+        <widget class="QLabel" name="label_2">
+         <property name="text">
           <string>Filter:</string>
          </property>
         </widget>
        </item>
        <item>
-        <widget class="QTreeView" name="filtersSelector" />
+        <widget class="QTreeView" name="filtersSelector"/>
        </item>
       </layout>
      </widget>
-     <widget class="QWidget" name="layoutWidget" >
-      <layout class="QGridLayout" >
-       <item row="0" column="0" >
-        <widget class="QLabel" name="label" >
-         <property name="text" >
+     <widget class="QWidget" name="layoutWidget">
+      <layout class="QGridLayout">
+       <item row="0" column="0">
+        <widget class="QLabel" name="label">
+         <property name="text">
           <string>Presets:</string>
          </property>
         </widget>
        </item>
-       <item row="0" column="1" >
-        <widget class="QComboBox" name="comboBoxPresets" >
-         <property name="sizePolicy" >
-          <sizepolicy vsizetype="Fixed" hsizetype="MinimumExpanding" >
+       <item row="0" column="1">
+        <widget class="QComboBox" name="comboBoxPresets">
+         <property name="sizePolicy">
+          <sizepolicy hsizetype="MinimumExpanding" vsizetype="Fixed">
            <horstretch>0</horstretch>
            <verstretch>0</verstretch>
           </sizepolicy>
          </property>
-         <property name="minimumSize" >
+         <property name="minimumSize">
           <size>
            <width>0</width>
            <height>0</height>
           </size>
          </property>
-         <property name="iconSize" >
+         <property name="iconSize">
           <size>
            <width>100</width>
            <height>100</height>
@@ -63,19 +64,19 @@
          </property>
         </widget>
        </item>
-       <item row="0" column="2" >
-        <widget class="QPushButton" name="pushButtonEditPressets" >
-         <property name="text" >
-          <string>edit presets</string>
+       <item row="0" column="2">
+        <widget class="QPushButton" name="pushButtonEditPressets">
+         <property name="text">
+          <string>Edit Presets</string>
          </property>
         </widget>
        </item>
-       <item row="1" column="0" colspan="3" >
-        <layout class="QVBoxLayout" >
+       <item row="1" column="0" colspan="3">
+        <layout class="QVBoxLayout">
          <item>
-          <widget class="QWidget" native="1" name="centralWidgetHolder" >
-           <property name="sizePolicy" >
-            <sizepolicy vsizetype="Expanding" hsizetype="Preferred" >
+          <widget class="QWidget" name="centralWidgetHolder" native="true">
+           <property name="sizePolicy">
+            <sizepolicy hsizetype="Preferred" vsizetype="Expanding">
              <horstretch>0</horstretch>
              <verstretch>0</verstretch>
             </sizepolicy>
@@ -83,11 +84,11 @@
           </widget>
          </item>
          <item>
-          <spacer name="verticalSpacer" >
-           <property name="orientation" >
+          <spacer name="verticalSpacer">
+           <property name="orientation">
             <enum>Qt::Vertical</enum>
            </property>
-           <property name="sizeHint" stdset="0" >
+           <property name="sizeHint" stdset="0">
             <size>
              <width>20</width>
              <height>40</height>
