--- a/kpresenter/part/ui/KPrPresentationTool.ui
+++ b/kpresenter/part/ui/KPrPresentationTool.ui
@@ -26,6 +26,13 @@
        </property>
       </widget>
      </item>
+    <item>
+      <widget class="QToolButton" name="blackButton" >
+       <property name="text" >
+        <string/>
+       </property>
+      </widget>
+     </item>
     </layout>
    </item>
   </layout>
